--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: row;
 }
 
 .App-logo {
@@ -36,3 +38,9 @@
     transform: rotate(360deg);
   }
 }
+
+.myNav {
+  position: absolute;
+  width: 100%;
+}
+
